# bluebox

./: .gitignore  CHANGELOG.md  Install.md  License.txt  README.md  bluebox_restore.list  bluebox_schema.sql  bluebox_schema_v0-1.sql  bluebox_schema_v0.4.sql  good_demo_queries.sql
bluebox_schema/: .gitignore  filter.rgf  flyway.toml
data-generation/: README.md  pyproject.toml
data-generation/src/bluebox_tmdb/: api.py  config.py  db.py  pipeline.py
docs/: data-generation.md  install.md  load-testing.md  tmdb-dataload.md
load-testing/: .env.example  README.md  pyproject.toml  scenario-catalog.md
load-testing/deploy/: README.md  bluebox-load.service
load-testing/scripts/: otel_smoke_test.py
load-testing/src/bluebox_load/: __init__.py  cli.py  config.py  db.py  pools.py  runner.py  scheduler.py  tracing.py
load-testing/src/bluebox_load/scenarios/: __init__.py  _registry.py  above_avg_renters.py  batch_customer_rentals.py  batch_film_lookup.py  browse_catalog.py  browse_films.py  create_rental.py  customer_account.py  customer_rentals.py  disc_recycling.py  film_availability.py  film_cast.py  film_detail.py  genre_popularity.py  inventory_utilization.py  multi_store_inventory.py  new_at_store.py  overdue_check.py  overdue_rentals.py  payment_detail_report.py  recent_store_activity.py  recent_store_rentals.py  rental_trends_report.py  return_rental.py  revenue_dashboard.py  revenue_report.py  stale_inventory.py  store_dashboard.py  store_inventory.py  store_performance.py  stores_nearby.py  top_actors_naive.py  top_actors_report.py  track_disc.py
(+114 files in other folders)
