[project]
name = "bluebox-tmdb"
version = "0.1.0"
description = "TMDB data ingestion for the Bluebox PostgreSQL sample database"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.1",
    "tmdbv3api>=1.9",
    "python-dotenv>=1.0",
]

[project.scripts]
bluebox-tmdb = "bluebox_tmdb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluebox_tmdb"]
