[project]
name = "bluebox-load"
version = "0.1.0"
description = "Realistic database query load generator for the Bluebox PostgreSQL sample database"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-instrumentation-psycopg>=0.41b0",
]

[project.scripts]
bluebox-load = "bluebox_load.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluebox_load"]
